--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,12 @@
         .container {
             width: 100%; 
             max-width: 1200px; 
-            background: #2c2c2c; /* Darker background for the container */
+            background: #2c2c2c;
             border-radius: 6px;
             padding: 40px; 
             margin: 2rem auto;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-            flex: 1; /* Allows the container to grow and push footer down */
+            flex: 1; 
         }
 
         .content {
